# DomoHome

./: CMakeLists.txt  sdkconfig
EEZStudio/DomoHome/: DomoHome.eez-project  DomoHome.eez-project-ui-state
EEZStudio/DomoHome/src/ui/: images.c  images.h  screens.c  screens.h
EEZStudio/DomoHome/src/ui/images/: ui_image_ico_temp.c  ui_image_ico_weater.c  ui_image_wifi_off.c  ui_image_wifi_on.c
components/i2c/: i2c.c  i2c.h
components/lvgl_port/: lvgl_port.h
components/sd/: sd.h
components/touch/: gt911.h
main/: CMakeLists.txt  DomoHomeMain.c  idf_component.yml
main/ui/: CMakeLists.txt  images.c  images.h  screens.c  screens.h
main/ui/images/: ui_image_ico_bluetoot.c  ui_image_ico_humidity.c  ui_image_ico_main_home.c  ui_image_ico_no_battery.c  ui_image_ico_settings.c  ui_image_ico_underfloor_heating.c  ui_image_img_humidity.c  ui_image_img_temp.c  ui_image_temp_humidity.c
main/user/AHT10/: AHT10.c  aht10.h
main/user/BME280/: BME280.c  BME280.h
main/user/BMP280/: BMP280.c  BMP280.h
main/user/PCF8523/: pcf8523.c  pcf8523.h  pcf8563.c  pcf8563.h
main/user/sd_card/: sd_card.c
